--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,23 @@
+version: '3.8'
+
 services:
   backend:
     build: ./backend
+    container_name: backend
     ports:
       - "8000:8000"
-    networks:
-      - app-network
 
   frontend:
     build: ./frontend
+    container_name: frontend
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     ports:
       - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
+      - frontend
       - backend
-    networks:
-      - app-network
-
-networks:
-  app-network:
