--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,24 @@
-# frontend/Dockerfile
 FROM node:20 AS build
 
 WORKDIR /app
+
+# Accept the build-time variable
+ARG VITE_API_BASE_URL
+
+# Set it so Vite can use it
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
+
 RUN npm run build
 
 FROM nginx:alpine
+
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
